--- a/Teste/.vscode/settings.json
+++ b/Teste/.vscode/settings.json
@@ -7,7 +7,8 @@
     "idf.openOcdConfigs": [
         "board/esp32-wrover-kit-3.3v.cfg"
     ],
-    "idf.portWin": "COM1",
+    "idf.portWin": "COM3",
     "idf.pythonBinPathWin": "C:\\Users\\jose.adriano\\.espressif\\python_env\\idf5.0_py3.8_env\\Scripts\\python.exe",
-    "idf.toolsPathWin": "C:\\Users\\jose.adriano\\.espressif"
+    "idf.toolsPathWin": "C:\\Users\\jose.adriano\\.espressif",
+    "idf.flashType": "UART"
 }
